--- a/public/css/static/app.css
+++ b/public/css/static/app.css
@@ -117,6 +117,18 @@ body {
     }
 }
 
+@media (max-width: 425px) {
+    .tagline h1 {
+        font-size: 60px !important;
+        text-align: center;
+    }
+
+    .tagline p,
+    .tagline a {
+        margin-left: 10px;
+    }
+}
+
 .navbar .container,
 .tagline .container {
     padding: 0;
@@ -608,4 +620,32 @@ body {
 
 .iteration a:last-child {
     border-right: 1px solid var(--gray);
+}
+
+.accrodion-regular .card {
+    margin-bottom: 5px;
+}
+
+.accrodion-regular .card-body {
+    margin-top: -1px;
+}
+
+.accrodion-regular .card .card-header {
+    font-size: 16px;
+    padding: 10px;
+    background-color: transparent;
+}
+
+.accrodion-regular .card .card-header:first-child {
+    border-radius: calc(4px - 1px) calc(4px - 1px) 0 0;
+}
+
+.accrodion-regular .card .card-header .btn-link {
+    color: #000000;
+    text-decoration: none;
+}
+
+.accrodion-regular .card .card-header .btn-link:hover {
+    color: var(--pink);
+    text-decoration: none;
 }
