--- a/public/css/static/app.css
+++ b/public/css/static/app.css
@@ -264,7 +264,8 @@ body {
 #about h6,
 #services h6,
 #testimonials h6,
-#blog-events h6 {
+#blog-events h6,
+#recommended-rooms h6 {
     color: var(--pink);
 }
 
@@ -272,6 +273,7 @@ body {
 #services h3,
 #testimonials h3,
 #blog-events h3,
+#recommended-rooms h3,
 #rooms h3,
 #contact h3 {
     font-size: 40px;
