--- a/public/css/static/app.css
+++ b/public/css/static/app.css
@@ -322,33 +322,6 @@ body {
     width: 100%;
 }
 
-/* #recommended-rooms .col-sm-12:first-child .rooms {
-    height: 500px;
-    background-image: url('/img/static/rooms/christian-mackie-cc0Gg3BegjE-unsplash.jpg');
-    background-size: cover;
-    background-position: center;
-}
-
-#recommended-rooms .col-sm-12:nth-child(2) .rooms {
-    height: 500px;
-    background-image: url('/img/static/rooms/grovemade-dS62MvK4CtM-unsplash.jpg');
-    background-size: cover;
-    background-position: center;
-}
-
-#recommended-rooms .col-sm-12:nth-child(3) .rooms {
-    height: 500px;
-    background-image: url('/img/static/rooms/orlova-maria-8IVsBArxQDA-unsplash.jpg');
-    background-size: cover;
-}
-
-#recommended-rooms .col-sm-12:last-child .rooms {
-    height: 500px;
-    background-image: url('/img/static/rooms/roberto-nickson-rEJxpBskj3Q-unsplash.jpg');
-    background-size: cover;
-    background-position: center;
-} */
-
 .room-detail {
     position: absolute;
     width: 100%;
@@ -456,11 +429,11 @@ body {
 }
 
 .carousel-control-prev {
-    margin-left: 40%;
+    margin-left: 38.5%;
 }
 
 .carousel-control-next {
-    margin-right: 40%;
+    margin-right: 38.5%;
 }
 
 .rate svg {
@@ -650,4 +623,112 @@ body {
 .accrodion-regular .card .card-header .btn-link:hover {
     color: var(--pink);
     text-decoration: none;
+}
+
+/* 404 NOT FOUND */
+
+#notfound {
+    position: relative;
+    height: 100vh;
+}
+
+#notfound .notfound {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.notfound {
+    max-width: 520px;
+    width: 100%;
+    line-height: 1.4;
+    text-align: center;
+}
+
+.notfound .notfound-404 {
+    position: relative;
+    height: 200px;
+    margin: 0px auto 20px;
+    z-index: -1;
+}
+
+.notfound .notfound-404 h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 236px;
+    font-weight: 200;
+    margin: 0px;
+    color: #211b19;
+    text-transform: uppercase;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.notfound .notfound-404 h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 28px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #211b19;
+    background: #fff;
+    padding: 10px 5px;
+    margin: auto;
+    display: inline-block;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+}
+
+.notfound a {
+    font-family: 'Montserrat', sans-serif;
+    display: inline-block;
+    font-weight: 700;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 13px 23px;
+    background: rgb(255, 20, 182);
+    border: 1px solid rgb(255, 20, 182);
+    font-size: 18px;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+.notfound a:hover {
+    color: rgb(255, 20, 182);
+    background: transparent;
+    border: 1px solid rgb(255, 20, 182);
+}
+
+@media only screen and (max-width: 767px) {
+    .notfound .notfound-404 h1 {
+        font-size: 148px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .notfound .notfound-404 {
+        height: 148px;
+        margin: 0px auto 10px;
+    }
+
+    .notfound .notfound-404 h1 {
+        font-size: 86px;
+    }
+
+    .notfound .notfound-404 h2 {
+        font-size: 16px;
+    }
+
+    .notfound a {
+        padding: 7px 15px;
+        font-size: 14px;
+    }
 }
